# Health.by

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
health/: settings.py  urls.py
news/: forms.py  models.py  urls.py  views.py
news/migrations/: 0001_initial.py
templates/: base.html
templates/django_registration/: registration_form.html
templates/news/: create_news.html  detail.html  index.html  index_tag.html
templates/registration/: login.html
templates/user_profile/: create_profile.html  create_profile_doctor.html  create_reservation.html  create_reservation_second_step.html  create_treatment.html  detail.html  detail_profile.html  detail_profile_doctor.html  detail_reservation.html  detail_treatment.html  index.html  search_doctor.html
user_profile/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
user_profile/migrations/: 0001_initial.py  0002_alter_profile_date_of_birth_alter_profile_first_name_and_more.py  0002_alter_treatment_creator.py  0003_profiledoctor_speciality.py  0003_remove_profile_id_alter_profile_user.py  0004_profile_image_alter_profile_user.py
