[tool.poetry]
name = "health"
version = "0.1.0"
description = ""
authors = ["Aleksandr <mendelev.basic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
django-registration = "^3.4"
django-bootstrap4 = "^23.2"
psycopg2-binary = "^2.9.9"
pre-commit-hooks = "^4.5.0"
pillow = "^10.1.0"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
pre-commit = "^3.5.0"
poetry-lock-check = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
skip-string-normalization = true

[tool.isort]
profile = "black"
lines_after_imports = 2




